--- a/Reactapp/package.json
+++ b/Reactapp/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://marveldo.github.io/Django-reactapp",
   "name": "firstone",
   "version": "0.1.0",
   "private": true,
@@ -8,16 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-auth-kit": "^3.0.0-alpha.44",
     "react-bootstrap": "^2.9.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
