--- a/Reactapp/package.json
+++ b/Reactapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://marveldo.github.io/Django-reactapp",
+  "homepage": "http://marveldo.github.io/Django-reactapp/",
   "name": "firstone",
   "version": "0.1.0",
   "private": true,
