--- a/DjangoBackend/requirements.txt
+++ b/DjangoBackend/requirements.txt
@@ -24,7 +24,7 @@ oauthlib==3.2.2
 packaging==23.2
 Pillow==10.1.0
 platformdirs==3.11.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
