--- a/DjangoBackend/vercel.json
+++ b/DjangoBackend/vercel.json
@@ -1,13 +1,8 @@
 {
-    "builds": [{
-        "src": "Backend/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "Backend/wsgi.py"
-        }
-    ]
+  "builds": [
+    {
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
+    }
+  ]
 }
